--- a/Code/Analysis.ipynb
+++ b/Code/Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "4b751712",
+   "id": "ff45febf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6ef2bda",
+   "id": "eefd34bb",
    "metadata": {},
    "source": [
     "# Step 1 : Data Acquisition"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8bf4f5b",
+   "id": "168f4f62",
    "metadata": {},
    "source": [
     "### License\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c696fb9a",
+   "id": "8700995e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8cbc0614",
+   "id": "20727dd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f2ed34a",
+   "id": "d81a3253",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b570cfe8",
+   "id": "87612d4f",
    "metadata": {
     "scrolled": true
    },
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "94f6da01",
+   "id": "774bc27a",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "292691e5",
+   "id": "eb25e6b8",
    "metadata": {
     "scrolled": true
    },
@@ -5912,7 +5912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d169ce2",
+   "id": "83042fa1",
    "metadata": {},
    "source": [
     "### The API Call failed for Victor/Victoria"
@@ -5921,7 +5921,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3e3d76f0",
+   "id": "9a215af0",
    "metadata": {},
    "outputs": [
     {
@@ -5943,7 +5943,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "eb1689ff",
+   "id": "d8d86087",
    "metadata": {},
    "outputs": [
     {
@@ -6047,7 +6047,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "886bed58",
+   "id": "1a60d5d0",
    "metadata": {},
    "outputs": [
     {
@@ -6068,7 +6068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51dfc3dd",
+   "id": "2692ac10",
    "metadata": {},
    "source": [
     "## Creating Json Files"
@@ -6077,7 +6077,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1261af5d",
+   "id": "ad8ac936",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6088,7 +6088,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a5b8ac6e",
+   "id": "f3677855",
    "metadata": {},
    "outputs": [
     {
@@ -6207,7 +6207,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "318ce009",
+   "id": "edf519f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6217,7 +6217,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5da3e9c6",
+   "id": "8d25f1a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6227,7 +6227,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "73f129ba",
+   "id": "88ad9c0e",
    "metadata": {},
    "outputs": [
     {
@@ -6249,7 +6249,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0f8e993c",
+   "id": "eb996c46",
    "metadata": {},
    "outputs": [
     {
@@ -6439,7 +6439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f6a37c5",
+   "id": "bcffd6cd",
    "metadata": {},
    "source": [
     "### Creating individual dictionaries for desktop, mobile and cumulative"
@@ -6448,7 +6448,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "9b4eb1e9",
+   "id": "01529135",
    "metadata": {},
    "outputs": [
     {
@@ -6489,23 +6489,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "11d5726e",
+   "execution_count": 233,
+   "id": "0b659e71",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "with open(f\"../Output and Results/academy_monthly_mobile_{201507}-{202309}.json\", \"w\") as file:\n",
+    "with open(f\"../Output/academy_monthly_mobile_{201507}-{202309}.json\", \"w\") as file:\n",
     "    json.dump(mobile_json, file)\n",
-    "with open(\"../Output and Results/academy_monthly_desktop_201507-202309.json\", \"w\") as file:\n",
+    "with open(\"../Output/academy_monthly_desktop_201507-202309.json\", \"w\") as file:\n",
     "    json.dump(desktop_json, file)\n",
-    "with open(\"../Output and Results/academy_monthly_cumulative_201507-202309.json\", \"w\") as file:\n",
+    "with open(\"../Output/academy_monthly_cumulative_201507-202309.json\", \"w\") as file:\n",
     "    json.dump(cumulative_json, file)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "84f4dbd7",
+   "id": "48819194",
    "metadata": {},
    "source": [
     "# First Analysis"
@@ -6513,21 +6513,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "id": "c72062de",
+   "execution_count": 234,
+   "id": "52964616",
    "metadata": {},
    "outputs": [],
    "source": [
-    "desktop_json = json.load(open('../Output and Results/academy_monthly_desktop_201507-202309.json'))\n",
-    "mobile_json = json.load(open('../Output and Results/academy_monthly_mobile_201507-202309.json'))\n",
+    "desktop_json = json.load(open('../Output/academy_monthly_desktop_201507-202309.json'))\n",
+    "mobile_json = json.load(open('../Output/academy_monthly_mobile_201507-202309.json'))\n",
     "desktop = pd.json_normalize(desktop_json)\n",
     "mobile = pd.json_normalize(mobile_json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
-   "id": "6be87444",
+   "execution_count": 235,
+   "id": "a801822c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6553,7 +6553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba2de8e7",
+   "id": "6aa0cfdd",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -6561,8 +6561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
-   "id": "edbc891f",
+   "execution_count": 236,
+   "id": "12d080c7",
    "metadata": {},
    "outputs": [
     {
@@ -6591,13 +6591,13 @@
     "plt.ylabel('Views')\n",
     "fig.legend(loc=\"upper right\", bbox_to_anchor=(0.15, 0.9))\n",
     "plt.show()\n",
-    "plt.savefig('../Output and Results/Max_Min_plot.png')\n",
+    "plt.savefig('../Output/Max_Min_plot.png')\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "36bac0c0",
+   "id": "57d189cf",
    "metadata": {},
    "source": [
     "# Second Analysis"
@@ -6605,8 +6605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
-   "id": "ed0004ea",
+   "execution_count": 237,
+   "id": "f077b765",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6629,7 +6629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0796c17",
+   "id": "1c667b2a",
    "metadata": {},
    "source": [
     "### Visualization"
@@ -6637,8 +6637,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "id": "9f2d9981",
+   "execution_count": 238,
+   "id": "5bfa8cc3",
    "metadata": {},
    "outputs": [
     {
@@ -6663,13 +6663,13 @@
     "plt.ylabel('Views')\n",
     "fig.legend(loc=\"upper right\", bbox_to_anchor=(0.15, 0.9))\n",
     "plt.show()\n",
-    "plt.savefig('../Output and Results/Top10_plot.png')\n",
+    "plt.savefig('../Output/Top10_plot.png')\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "da53074f",
+   "id": "1bb5617b",
    "metadata": {},
    "source": [
     "# Third Analysis"
@@ -6677,8 +6677,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "id": "4f42c242",
+   "execution_count": 239,
+   "id": "0dcbacc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6703,7 +6703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9855622c",
+   "id": "7f85c68b",
    "metadata": {},
    "source": [
     "### Visualization"
@@ -6711,8 +6711,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
-   "id": "c44a3639",
+   "execution_count": 240,
+   "id": "b5beb72d",
    "metadata": {},
    "outputs": [
     {
@@ -6737,14 +6737,14 @@
     "plt.ylabel('Views')\n",
     "fig.legend(loc=\"upper right\", bbox_to_anchor=(0.15, 0.9))\n",
     "plt.show()\n",
-    "plt.savefig('../Output and Results/Fewest10_plot.png')\n",
+    "plt.savefig('../Output/Fewest10_plot.png')\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5763c766",
+   "id": "a867681b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6752,7 +6752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40622e1d",
+   "id": "3f12a0c5",
    "metadata": {},
    "outputs": [],
    "source": []
