--- a/Code/Analysis.ipynb
+++ b/Code/Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "f0240ddc",
+   "id": "8121c332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f700ee0",
+   "id": "a5ed9d56",
    "metadata": {},
    "source": [
     "# Step 1 : Data Acquisition"
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e156d58",
+   "id": "6a5ae351",
    "metadata": {},
    "source": [
     "### License\n",
     "\n",
     "Code Owner : Dr. David W. McDonald \n",
     "\n",
-    "Creative Commons CC-BY license. Revision 1.2 - August 14, 2023"
+    "Creative Commons CC-BY license"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "040035ca",
+   "id": "178ea3c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e63941f6",
+   "id": "3314c50c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fad17780",
+   "id": "6381a573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "08cdebd2",
+   "id": "d76d63af",
    "metadata": {
     "scrolled": true
    },
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e0227c31",
+   "id": "5bb2724d",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fb57bc48",
+   "id": "6703b46a",
    "metadata": {
     "scrolled": true
    },
@@ -5912,7 +5912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda12fc6",
+   "id": "9fb1a81c",
    "metadata": {},
    "source": [
     "### The API Call failed for Victor/Victoria"
@@ -5921,7 +5921,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "60f57ff0",
+   "id": "b99a33c8",
    "metadata": {},
    "outputs": [
     {
@@ -5943,7 +5943,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f2be3366",
+   "id": "1bfb35d1",
    "metadata": {},
    "outputs": [
     {
@@ -6047,7 +6047,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cc99110d",
+   "id": "7beac1d1",
    "metadata": {},
    "outputs": [
     {
@@ -6068,7 +6068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "988d961b",
+   "id": "279fadb7",
    "metadata": {},
    "source": [
     "## Creating Json Files"
@@ -6077,7 +6077,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c685c12d",
+   "id": "ef9747b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6088,7 +6088,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f49a0032",
+   "id": "b7c4922c",
    "metadata": {},
    "outputs": [
     {
@@ -6207,7 +6207,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e6bc021c",
+   "id": "82074f82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6217,7 +6217,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "007d9cea",
+   "id": "bf0392ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6227,7 +6227,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "517e7f99",
+   "id": "539e434b",
    "metadata": {},
    "outputs": [
     {
@@ -6249,7 +6249,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5213f141",
+   "id": "9338fbd1",
    "metadata": {},
    "outputs": [
     {
@@ -6439,7 +6439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38960250",
+   "id": "5ccfbbfd",
    "metadata": {},
    "source": [
     "### Creating individual dictionaries for desktop, mobile and cumulative"
@@ -6448,7 +6448,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "186eaf26",
+   "id": "b7a7ca3b",
    "metadata": {},
    "outputs": [
     {
@@ -6488,9 +6488,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5935a665",
+   "metadata": {},
+   "source": [
+    "### Saving Jsons"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "6ccdcb1a",
+   "id": "07e8640f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6505,7 +6513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc9d1da4",
+   "id": "5e47a6c0",
    "metadata": {},
    "source": [
     "# First Analysis"
@@ -6514,7 +6522,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "e4128f23",
+   "id": "026862e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6527,7 +6535,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "e4319661",
+   "id": "d5b78a93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6553,7 +6561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d80255c1",
+   "id": "b8dcf4e0",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -6562,7 +6570,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "07ae4661",
+   "id": "b4a2e5dc",
    "metadata": {},
    "outputs": [
     {
@@ -6597,7 +6605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21879943",
+   "id": "cc819db1",
    "metadata": {},
    "source": [
     "# Second Analysis"
@@ -6606,7 +6614,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "ed49240e",
+   "id": "2e8fbfe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6629,7 +6637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf506450",
+   "id": "2bac09b6",
    "metadata": {},
    "source": [
     "### Visualization"
@@ -6638,7 +6646,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "b2a47604",
+   "id": "2bb3bf4a",
    "metadata": {},
    "outputs": [
     {
@@ -6670,7 +6678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "744959a3",
+   "id": "2dc84a89",
    "metadata": {},
    "source": [
     "# Third Analysis"
@@ -6679,7 +6687,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "522216e0",
+   "id": "8c5c874d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6704,7 +6712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c86eb15",
+   "id": "e2a17214",
    "metadata": {},
    "source": [
     "### Visualization"
@@ -6713,7 +6721,7 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "23a24be9",
+   "id": "a9e2a0ed",
    "metadata": {},
    "outputs": [
     {
@@ -6745,7 +6753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "286e4dde",
+   "id": "1b34083d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6753,7 +6761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00db4937",
+   "id": "7fd16745",
    "metadata": {},
    "outputs": [],
    "source": []
